# etholoopJetson

./: CMakeLists.txt  README.md  configuration.h  frame_queue.cpp  frame_queue.h  main.cpp  video.cu  video_writer.cpp  video_writer.h  ximea.cpp  ximea.h  yolo_trt.cpp  yolo_trt.h
train/: config.yaml  train.py
